...
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
    </string-array>
    <string-array name="list_trash_select">
        <item>もえるゴミ</item>
        <item>もえないゴミ</item>
        <item>プラスチック</item>
        <item>ビン</item>
        <item>カン</item>
        <item>ペットボトル</item>
        <item>古紙</item>
...
    </string-array>
    <string name="label_weekday_text">曜日</string>
    <string name="of_text">の</string>
    <string name="label_of_exclude_day">の例外日を設定</string>
    <string name="label_exclude_month">月</string>
    <string name="label_exclude_day">日</string>
    <string name="text_save">保存</string>
    <string-array name="list_exclude_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
...
        <item>12</item>
    </string-array>
    <string name="app_link_uri">https://mobileapp.mythrowaway.net</string>
    <string name="text_account_link">アカウントリンクしています……</string>
    <string name="label_help_button">問い合わせ</string>
    <string name="url_error">https://backend.mythrowaway.net/500.html</string>
    <string name="menu_item_open_browser">Chromeで開く</string>
    <string name="label_user_id">ユーザーID</string>
    <string name="action_user">user_info</string>
    <string name="label_edit">編集</string>
    <string name="label_exception_days">例外日</string>
    <string name="label_share">共有・アレクサ</string>
    <string name="label_user">ユーザー情報</string>
...

    <string name="text_title_trash_list">ゴミ出し予定一覧</string>"
    <string name="text_title_suffix_exclude_day_of_month">の例外日設定</string>
    <string name="text_title_exclude_day_of_month">例外日の設定</string>
    <string name="text_title_common_exclude_day_of_month">共通例外日の設定</string>

    <string name="text_exclude_day_of_month_button">例外日を設定</string>
    <string name="text_common_exclude_day_button">共通例外日を設定</string>
    <string name="text_exclude_day_of_month_apply_button">設定</string>
    <string name="text_register_trash_button">登録</string>
    <string name="text_cancel_register_trash_button">キャンセル</string>
    <string name="text_trash_name_input_placeholder">ゴミの名前を入力</string>
    <string name="text_weekday_toggle_button">毎週</string>
    <string name="text_monthly_toggle_button">毎月</string>
    <string name="text_ordinal_weekday_toggle_button">固定の週と曜日</string>
    <string name="text_interval_weekday_toggle_button">隔週</string>
...
